# sqlite3_cpp

src/: BooksInventory.sqlite3  CMakeLists.txt  main.cpp
src/Database/: CMakeLists.txt  database.cpp  database.h
